--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/storage": "^3.0.4",
+    "axios": "^0.19.0",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.5",
     "firebase-admin": "^8.3.0"
   }
 }
